data/all_generated_tests/raw_wast_tests/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_15.wast
;; 6. **Test Description**: Execute an `if-else` instruction where both branches call different imported functions. Compare the outcomes to determine if the results match expected behavior.    - **Constraint Checked**: Consistency in executing `then` and `else` paths that cross module boundaries.    - **Test Relation**: Tests for correct function call handling and return value integrity in conditional branches.

(assert_invalid 
  (module 
    (import "env" "func_one" (func $func_one (result i32))) 
    (import "env" "func_two" (func $func_two (result i32))) 
    (func $test_if_else_imports 
      (local $condition i32) 
      (i32.const 1) 
      (set_local $condition) 
      (if (result i32) 
        (get_local $condition) 
        (then (call $func_one)) 
        (else (call $func_two)) 
      ) 
      (drop)
    ) 
  ) 
  "type mismatch"
)